Pick some nits for IntelliJ