@@ -231,7 +231,7 @@ public class InternalEngineTests extends EngineTestCase {
      */
     private static Engine.IndexResult indexDoc(Engine engine, Engine.Index operation) throws IOException {
         if (randomBoolean()) {
-            return engine.indexBatch(List.of(operation)).get(0);
+            return engine.indexBatch(List.of(operation)).getFirst();
         }
         return engine.index(operation);
     }
@@ -421,7 +421,7 @@ public class InternalEngineTests extends EngineTestCase {
 
             segments = engine.segments();
             assertThat(segments.size(), equalTo(1));
-            assertThat(segments.get(0).getSegmentSort(), equalTo(indexSort));
+            assertThat(segments.getFirst().getSegmentSort(), equalTo(indexSort));
 
             ParsedDocument doc2 = testParsedDocument("2", null, testDocumentWithTextField(), B_2, null);
             indexDoc(engine, indexForDoc(doc2));
@@ -432,7 +432,7 @@ public class InternalEngineTests extends EngineTestCase {
 
             segments = engine.segments();
             assertThat(segments.size(), equalTo(3));
-            assertThat(segments.get(0).getSegmentSort(), equalTo(indexSort));
+            assertThat(segments.getFirst().getSegmentSort(), equalTo(indexSort));
             assertThat(segments.get(1).getSegmentSort(), equalTo(indexSort));
             assertThat(segments.get(2).getSegmentSort(), equalTo(indexSort));
         }
@@ -490,9 +490,9 @@ public class InternalEngineTests extends EngineTestCase {
             engine.refresh("test");
             List<Segment> segments = engine.segments();
             assertThat(segments, hasSize(1));
-            assertThat(segments.get(0).getNumDocs(), equalTo(liveDocsFirstSegment.size()));
-            assertThat(segments.get(0).getDeletedDocs(), equalTo(0));
-            assertFalse(segments.get(0).committed);
+            assertThat(segments.getFirst().getNumDocs(), equalTo(liveDocsFirstSegment.size()));
+            assertThat(segments.getFirst().getDeletedDocs(), equalTo(0));
+            assertFalse(segments.getFirst().committed);
             int deletes = 0;
             int updates = 0;
             int appends = 0;
@@ -520,9 +520,9 @@ public class InternalEngineTests extends EngineTestCase {
             engine.refresh("test");
             segments = engine.segments();
             assertThat(segments, hasSize(2));
-            assertThat(segments.get(0).getNumDocs(), equalTo(liveDocsFirstSegment.size()));
-            assertThat(segments.get(0).getDeletedDocs(), equalTo(updates + deletes));
-            assertThat(segments.get(0).committed, equalTo(committed));
+            assertThat(segments.getFirst().getNumDocs(), equalTo(liveDocsFirstSegment.size()));
+            assertThat(segments.getFirst().getDeletedDocs(), equalTo(updates + deletes));
+            assertThat(segments.getFirst().committed, equalTo(committed));
 
             assertThat(segments.get(1).getNumDocs(), equalTo(updates + appends));
             assertThat(segments.get(1).getDeletedDocs(), equalTo(deletes)); // delete tombstones
@@ -656,7 +656,7 @@ public class InternalEngineTests extends EngineTestCase {
             recoveringEngine.refresh("test");
             try (Engine.Searcher searcher = recoveringEngine.acquireSearcher("test")) {
                 Integer totalHits = searcher.search(Queries.ALL_DOCS_INSTANCE, new TotalHitCountCollectorManager(searcher.getSlices()));
-                assertThat(totalHits, equalTo(operations.get(operations.size() - 1) instanceof Engine.Delete ? 0 : 1));
+                assertThat(totalHits, equalTo(operations.getLast() instanceof Engine.Delete ? 0 : 1));
             }
         }
     }
@@ -2037,10 +2037,10 @@ public class InternalEngineTests extends EngineTestCase {
             300,
             "1"
         );
-        final Engine.Operation lastOpDoc1 = opsDoc1.get(opsDoc1.size() - 1);
+        final Engine.Operation lastOpDoc1 = opsDoc1.getLast();
         final String lastFieldValueDoc1;
         if (lastOpDoc1 instanceof Engine.Index index) {
-            lastFieldValueDoc1 = index.docs().get(0).get("value");
+            lastFieldValueDoc1 = index.docs().getFirst().get("value");
         } else {
             // delete
             lastFieldValueDoc1 = null;
@@ -2053,10 +2053,10 @@ public class InternalEngineTests extends EngineTestCase {
             300,
             "2"
         );
-        final Engine.Operation lastOpDoc2 = opsDoc2.get(opsDoc2.size() - 1);
+        final Engine.Operation lastOpDoc2 = opsDoc2.getLast();
         final String lastFieldValueDoc2;
         if (lastOpDoc2 instanceof Engine.Index index) {
-            lastFieldValueDoc2 = index.docs().get(0).get("value");
+            lastFieldValueDoc2 = index.docs().getFirst().get("value");
         } else {
             // delete
             lastFieldValueDoc2 = null;
@@ -2065,7 +2065,7 @@ public class InternalEngineTests extends EngineTestCase {
         final AtomicLong seqNoGenerator = new AtomicLong();
         BiFunction<Engine.Operation, Long, Engine.Operation> seqNoUpdater = (operation, newSeqNo) -> {
             if (operation instanceof Engine.Index index) {
-                LuceneDocument doc = testDocumentWithTextField(index.docs().get(0).get("value"));
+                LuceneDocument doc = testDocumentWithTextField(index.docs().getFirst().get("value"));
                 ParsedDocument parsedDocument = testParsedDocument(index.id(), index.routing(), doc, index.source(), null);
                 return new Engine.Index(
                     index.uid(),
@@ -2305,7 +2305,7 @@ public class InternalEngineTests extends EngineTestCase {
                     assertThat(result.getVersion(), equalTo(Math.max(lastOpVersion + 1, 1)));
                     assertThat(result.getResultType(), equalTo(Engine.Result.Type.SUCCESS));
                     assertThat(result.getFailure(), nullValue());
-                    lastFieldValue = index.docs().get(0).get("value");
+                    lastFieldValue = index.docs().getFirst().get("value");
                     docDeleted = false;
                     lastOpVersion = result.getVersion();
                     lastOpSeqNo = result.getSeqNo();
@@ -2398,10 +2398,10 @@ public class InternalEngineTests extends EngineTestCase {
         nonInternalVersioning.remove(VersionType.INTERNAL);
         final VersionType versionType = randomFrom(nonInternalVersioning);
         final List<Engine.Operation> ops = generateSingleDocHistory(false, versionType, 2, 2, 20, "1");
-        final Engine.Operation lastOp = ops.get(ops.size() - 1);
+        final Engine.Operation lastOp = ops.getLast();
         final String lastFieldValue;
         if (lastOp instanceof Engine.Index index) {
-            lastFieldValue = index.docs().get(0).get("value");
+            lastFieldValue = index.docs().getFirst().get("value");
         } else {
             // delete
             lastFieldValue = null;
@@ -2484,7 +2484,7 @@ public class InternalEngineTests extends EngineTestCase {
     public void testVersioningPromotedReplica() throws IOException {
         final List<Engine.Operation> replicaOps = generateSingleDocHistory(true, VersionType.INTERNAL, 1, 2, 20, "1");
         List<Engine.Operation> primaryOps = generateSingleDocHistory(false, VersionType.INTERNAL, 2, 2, 20, "1");
-        Engine.Operation lastReplicaOp = replicaOps.get(replicaOps.size() - 1);
+        Engine.Operation lastReplicaOp = replicaOps.getLast();
         final boolean deletedOnReplica = lastReplicaOp instanceof Engine.Delete;
         final long finalReplicaVersion = lastReplicaOp.version();
         final long finalReplicaSeqNo = lastReplicaOp.seqNo();
@@ -2502,10 +2502,10 @@ public class InternalEngineTests extends EngineTestCase {
 
     public void testConcurrentExternalVersioningOnPrimary() throws IOException, InterruptedException {
         final List<Engine.Operation> ops = generateSingleDocHistory(false, VersionType.EXTERNAL, 2, 100, 300, "1");
-        final Engine.Operation lastOp = ops.get(ops.size() - 1);
+        final Engine.Operation lastOp = ops.getLast();
         final String lastFieldValue;
         if (lastOp instanceof Engine.Index index) {
-            lastFieldValue = index.docs().get(0).get("value");
+            lastFieldValue = index.docs().getFirst().get("value");
         } else {
             // delete
             lastFieldValue = null;
@@ -5210,7 +5210,7 @@ public class InternalEngineTests extends EngineTestCase {
             }
         }
 
-        final boolean exists = operations.get(operations.size() - 1) instanceof Engine.Index;
+        final boolean exists = operations.getLast() instanceof Engine.Index;
         Randomness.shuffle(operations);
 
         for (final Engine.Operation operation : operations) {
@@ -5915,7 +5915,7 @@ public class InternalEngineTests extends EngineTestCase {
                     engine.flush(randomBoolean(), true);
                     final List<IndexCommit> commits = DirectoryReader.listCommits(store.directory());
                     // Keep only one safe commit as the oldest commit.
-                    final IndexCommit safeCommit = commits.get(0);
+                    final IndexCommit safeCommit = commits.getFirst();
                     if (lastSyncedGlobalCheckpointBeforeCommit.get() == UNASSIGNED_SEQ_NO) {
                         // If the global checkpoint is still unassigned, we keep an empty(eg. initial) commit as a safe commit.
                         assertThat(
@@ -6082,7 +6082,7 @@ public class InternalEngineTests extends EngineTestCase {
             engine.syncTranslog();
             List<IndexCommit> commits = DirectoryReader.listCommits(store.directory());
             assertThat(
-                Long.parseLong(commits.get(0).getUserData().get(SequenceNumbers.MAX_SEQ_NO)),
+                Long.parseLong(commits.getFirst().getUserData().get(SequenceNumbers.MAX_SEQ_NO)),
                 lessThanOrEqualTo(globalCheckpoint.get())
             );
             for (int i = 1; i < commits.size(); i++) {
@@ -6094,7 +6094,7 @@ public class InternalEngineTests extends EngineTestCase {
             // Global checkpoint advanced enough - only the last commit is kept.
             globalCheckpoint.set(randomLongBetween(engine.getPersistedLocalCheckpoint(), Long.MAX_VALUE));
             engine.syncTranslog();
-            assertThat(DirectoryReader.listCommits(store.directory()), contains(commits.get(commits.size() - 1)));
+            assertThat(DirectoryReader.listCommits(store.directory()), contains(commits.getLast()));
             assertThat(engine.getTranslog().totalOperations(), equalTo(0));
         }
     }
@@ -6512,8 +6512,8 @@ public class InternalEngineTests extends EngineTestCase {
                 .orElse(SequenceNumbers.NO_OPS_PERFORMED);
             final List<IndexCommit> commits = DirectoryReader.listCommits(store.directory());
             assertThat(commits, hasSize(1));
-            assertThat(commits.get(0).getUserData().get(SequenceNumbers.MAX_SEQ_NO), equalTo(Long.toString(safeMaxSeqNo)));
-            try (IndexReader reader = DirectoryReader.open(commits.get(0))) {
+            assertThat(commits.getFirst().getUserData().get(SequenceNumbers.MAX_SEQ_NO), equalTo(Long.toString(safeMaxSeqNo)));
+            try (IndexReader reader = DirectoryReader.open(commits.getFirst())) {
                 for (LeafReaderContext context : reader.leaves()) {
                     final NumericDocValues values = context.reader().getNumericDocValues(SeqNoFieldMapper.NAME);
                     if (values != null) {
@@ -7093,7 +7093,7 @@ public class InternalEngineTests extends EngineTestCase {
             try (Engine.Searcher searcher = engine.acquireSearcher("test")) {
                 IndexReader reader = searcher.getIndexReader();
                 assertEquals(2, reader.leaves().size());
-                LeafReaderContext leafReaderContext = reader.leaves().get(0);
+                LeafReaderContext leafReaderContext = reader.leaves().getFirst();
                 LeafReader leafReader = leafReaderContext.reader();
                 assertEquals("the delete and the tombstone", 1, leafReader.numDeletedDocs());
                 assertEquals(numDocs, leafReader.maxDoc());
@@ -7110,7 +7110,7 @@ public class InternalEngineTests extends EngineTestCase {
             try (Engine.Searcher searcher = engine.acquireSearcher("test")) {
                 IndexReader reader = searcher.getIndexReader();
                 assertEquals(1, reader.leaves().size());
-                LeafReaderContext leafReaderContext = reader.leaves().get(0);
+                LeafReaderContext leafReaderContext = reader.leaves().getFirst();
                 LeafReader leafReader = leafReaderContext.reader();
                 assertEquals("the delete and the tombstone", 2, leafReader.numDeletedDocs());
                 assertEquals(numDocs + 1, leafReader.maxDoc());
@@ -7563,7 +7563,7 @@ public class InternalEngineTests extends EngineTestCase {
                 try (Engine.Searcher internalSearcher = engine.acquireSearcher("test", Engine.SearcherScope.INTERNAL)) {
                     try (Engine.Searcher externalSearcher = engine.acquireSearcher("test", Engine.SearcherScope.EXTERNAL)) {
                         assertSame(internalSearcher.getDirectoryReader(), externalSearcher.getDirectoryReader());
-                        assertSame(warmedUpReaders.get(0), externalSearcher.getDirectoryReader());
+                        assertSame(warmedUpReaders.getFirst(), externalSearcher.getDirectoryReader());
                     }
                 }
                 index(engine, randomInt());
@@ -8141,7 +8141,7 @@ public class InternalEngineTests extends EngineTestCase {
         Engine.Index op = indexForDoc(doc);
         List<Engine.IndexResult> batchResults = engine.indexBatch(List.of(op));
         assertThat(batchResults, hasSize(1));
-        Engine.IndexResult result = batchResults.get(0);
+        Engine.IndexResult result = batchResults.getFirst();
         assertThat(result.getResultType(), equalTo(Engine.Result.Type.SUCCESS));
         assertThat(result.getSeqNo(), greaterThanOrEqualTo(0L));
 
@@ -8174,8 +8174,8 @@ public class InternalEngineTests extends EngineTestCase {
         );
         List<Engine.IndexResult> results = engine.indexBatch(List.of(conflictingOp));
         assertThat(results, hasSize(1));
-        assertThat(results.get(0).getResultType(), equalTo(Engine.Result.Type.FAILURE));
-        assertThat(results.get(0).getFailure(), instanceOf(VersionConflictEngineException.class));
+        assertThat(results.getFirst().getResultType(), equalTo(Engine.Result.Type.FAILURE));
+        assertThat(results.getFirst().getFailure(), instanceOf(VersionConflictEngineException.class));
     }
 
     public void testIndexBatchMixedNewAndExisting() throws IOException {
